<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interesting world</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="profile">Perfil</string>
    <string name="lastlocations">Nuevos puntos</string>
    <string name="explore">Mapa</string>
    <string name="photos">Nuevas fotografías</string>
    <string name="addlocation">Añadir punto de interés</string>
    <string name="visitlocation">Puntos de interés visitados</string>
    <string name="likedlocations">Puntos que te gustan</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="description">Descripción</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="accept">Aceptar</string>
    <string name="next">Siguiente</string>
    <string name="back">Atras</string>
    <string name="settings">Opciones</string>
    <string name="location">Ubicación</string>
    <string name="url_share">http://interestingworld.webcindario.com/</string>
    <string name="search">Buscar</string>
    <string name="all">Todos</string>
    <string name="art">Museos</string>
    <string name="monument">Monumentos</string>
    <string name="restaurant">Restaurantes</string>
    <string name="bar">Bares</string>
    <string name="beach">Playas</string>
    <string name="photograph">Miradores</string>
    <string name="leisure">Ocio</string>
    <string name="category_prompt">Elige una categoría</string>
    <string-array name="category_list">
        <item>Monumento</item>
        <item>Museo</item>
        <item>Restaurante</item>
        <item>Bar</item>
        <item>Playa</item>
        <item>Mirador</item>
        <item>Ocio</item>
    </string-array>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="marcar">Marcar</string>
    <string name="cancel">Cancelar</string>
    <string name="addComment">addComment</string>
    <string name="no_data_available">No hay resultados</string>
    <string name="user">Usuario</string>
    <string name="logout">Cerrar sesión</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="country">Pais</string>
    <string name="advanced">Avanzado</string>
    <string name="pulse">Pulsa en la imagen para subir una fotografía</string>
    <string name="category">Categoría</string>
    <string name="exit">Salir</string>

</resources>
