<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item android:id="@+id/list"
        android:icon="@drawable/location_white"
        android:title="@string/search"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/category0"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/all"
                android:icon="@drawable/location_white"/>
            <item
                android:id="@+id/category1"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/monument"
                android:icon="@drawable/museum_bar"/>
            <item
                android:id="@+id/category2"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/art"
                android:icon="@drawable/art_bar"/>
            <item
                android:id="@+id/category3"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/beach"
                android:icon="@drawable/beach_bar"/>
            <item
                android:id="@+id/category4"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/bar"
                android:icon="@drawable/beer_bar"/>
            <item
                android:id="@+id/category5"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/restaurant"
                android:icon="@drawable/restaurant_bar"/>
            <item
                android:id="@+id/category6"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/photograph"
                android:icon="@drawable/photograph_white"/>
            <item
                android:id="@+id/category7"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/leisure"
                android:icon="@drawable/leisure_white"/>
            <item
                android:id="@+id/category8"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/advanced"
                android:icon="@drawable/advanced"/>
        </menu>
    </item>
</menu>