<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLastname"
        android:layout_gravity="center_horizontal"
        android:hint="@string/lastname"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/pass"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aceptar"
        android:id="@+id/buttonEnviar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:onClick="buttonAccept" />
</LinearLayout>