<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".FragmentAddLocation"
        android:gravity="center"
        android:nestedScrollingEnabled="true">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ImageViewLocation"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.09"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:src="@drawable/imagelocation"
            android:adjustViewBounds="true"
                android:onClick="selectImage"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp" />

        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pulse"
            android:id="@+id/textView15"
            android:layout_column="16"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/category_prompt"
            android:id="@+id/textView10"
            android:layout_column="16"
            android:gravity="left|center"
            android:layout_marginTop="20dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCategory"
            android:layout_column="11"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name"
        android:layout_marginTop="25dp"
            android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="97dp"
        android:id="@+id/editTextDescription"
        android:layout_gravity="center_horizontal"
        android:hint="@string/description"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress|textMultiLine"
        android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Utiliza el mapa para colocar un punto orientativo (icono de la esquina derecha). Los campos se autorellenan, pero puedes editarlos."
            android:id="@+id/textView11"
            android:layout_column="16" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAdress"
            android:layout_gravity="center_horizontal"
            android:hint="@string/address"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCity"
            android:layout_gravity="center_horizontal"
            android:hint="@string/city"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCountry"
            android:layout_gravity="center_horizontal"
            android:hint="@string/country"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress" />

        <com.dd.CircularProgressButton
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttonEnviar"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="buttonAccept"
            app:cpb_textComplete="Enviado"
            app:cpb_textError="Error"
            app:cpb_textIdle="Enviar"
            android:layout_marginBottom="75dp" />
    </TableLayout>
</ScrollView>