<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/email"
        android:textSize="25dp"
        android:layout_below="@+id/editTextLastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLastname"
        android:hint="@string/lastname"
        android:textSize="25dp"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:hint="@string/name"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />
    <com.dd.CircularProgressButton
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttonEnviar"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textComplete="Modificado"
        app:cpb_textError="Error"
        app:cpb_textIdle="Modificar"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout >